[metadata]
name = syns
version = 0.1.0

[options]
packages = find:
package_dir =
     = src

install_requires =
    requests ~= 2.25.1
    beautifulsoup4 ~= 4.9.3
    python-datamuse ~= 1.3.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest


[options.entry_points]
console_scripts =
    syns = syns.__main__:main
