[metadata]
name = byword
version = 0.1.0

[options]
packages = find:
package_dir =
     = src

install_requires =
    python-datamuse ~= 1.3.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest
    build


[options.entry_points]
console_scripts =
    byword = byword.__main__:main
