[metadata]
name = byword
version = 0.1.0
author = Alexander Juda
description = CLI for generating synonyms using Datamuse API
long_description = file: README.rst
home-page = https://github.com/alexjuda/byword
license = MIT
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
     = src

install_requires =
    python-datamuse ~= 1.3.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest
    build


[options.entry_points]
console_scripts =
    byword = byword.__main__:main
